@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Fix session/info on nonexistent session (Consul 0.6.0)
 
 0.014     2015-12-07 17:05:57+11:00 Australia/Melbourne
 - Implement Sessions API
